crates/apollo-compiler/test_data/diagnostics/0099_input_object_extensions.txt
Error: duplicate definitions for the `field` field of input object type `UniqueNames`
   ╭─[0099_input_object_extensions.graphql:5:3]
   │
 2 │   field: String
   │   ──┬──  
   │     ╰──── previous definition of `field` here
   │ 
 5 │   field: String
   │   ──────┬──────  
   │         ╰──────── `field` redefined here
───╯
Error: non-repeatable directive nonRepeatable can only be used once per location
    ╭─[0099_input_object_extensions.graphql:12:30]
    │
  9 │ input UniqueDirective @nonRepeatable {
    │                       ───────┬──────  
    │                              ╰──────── directive `@nonRepeatable` first called here
    │ 
 12 │ extend input UniqueDirective @nonRepeatable
    │                              ───────┬──────  
    │                                     ╰──────── directive `@nonRepeatable` called again here
────╯

